# Vision-system

./: README.md
SVM/: CMakeLists.txt  Readme  main.cpp  无标题文档
SVM/src_svm/: CMakeLists.txt  predict_1202  ╬▐▒ъ╠т╬─╡╡
SVM/test_SVM/: CMakeLists.txt  generate_test_data.cpp
SVM/train_data/: CMakeLists.txt  generate_txt.cpp  read_traindata.cpp
camerapara/: cammeraparameter.mat  mat2opencv.m  matlab2opencv.m
image_capture/: Readme
image_capture/img_process2/: Armor.cpp  Armor.h  CMakeLists.txt  LightBar.h  main.cpp
image_capture/img_read/: CMakeLists.txt  main.cpp
infantry/: CMakeLists.txt
infantry/src/: CMakeLists.txt  Infantry.cpp  Infantry.h  main.cpp
infantry/src/assist/: AngleSolver.cpp  AngleSolver.h  Armor.cpp  Armor.h  ArmorDetector.cpp  ArmorDetector.h  CMakeLists.txt  STF.cpp  STF.h
infantry/src/buff/: AngleCal.cpp  AngleCal.h  AprilTag.c  AprilTag.h  BuffHiter.cpp  BuffHiter.h  BuffParam.cpp  BuffParam.h  CMakeLists.txt  NumDecoder.cpp  NumDecoder.h  Quad.cpp  Quad.h  QuadExtractor.cpp  QuadExtractor.h  hitBuff.cpp  hitBuffWithVideo.cpp  label_image.cc  label_image.h
infantry/src/cameraset/: CMakeLists.txt  main.cpp  myVideoCap.cpp  myVideoCap.h
infantry/src/protobuf/: CMakeLists.txt  hitcrt_rm0422.pb-c.c  hitcrt_rm0422.pb-c.h  rm_protobuf.cpp
infantry/src/serial/: CMakeLists.txt  serialapp.cpp  serialapp.h  serialbase.cpp
